--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<main class="container">
+<!-- <main class="container"> -->
   <router-outlet></router-outlet>
-</main>
+<!-- </main> -->
