--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,26 +1,38 @@
 <div class="menu-container">
         <div class="menu-item large">
+            <a routerLink="/best-seller">
             <img src="https://img.freepik.com/premium-photo/delicious-breakfast-with-croissants-coffee-berries-gray-background_79830-3174.jpg" alt="Best Seller" class="menu-image">
             <h3>Best Seller</h3>
+            </a>
         </div>
         <div class="menu-item side">
+            <a routerLink="/croissant">
             <img src="https://static.amarintv.com/media/PJVlR0ljpN9mLUs8WKcdC8NHGcRAbvbit1RavjTZ6sWyEMGGrQTsQCzBT6cXc0HXsx.jpg" alt="Croissant" class="menu-image">
             <h3>Croissant</h3>
+            </a>
         </div>
         <div class="menu-item side">
+            <a routerLink="/croffle">
             <img src="https://static.amarintv.com/media/PJVlR0ljpN9mLUs8Gu0YTabZlKHNsMv4SJAfRypbWB33cQQSwNmYtJasotO70ah2Pr.jpg" alt="Croffle" class="menu-image">
             <h3>Croffle</h3>
+            </a>
         </div>
         <div class="menu-item">
-            <img src="https://www.nestleprofessional.co.th/sites/default/files/2022-04/03-nestle-fruit-time-lemonade-li.png" alt="Drinks" class="menu-image">
+             <a routerLink="/drinks">
+            <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1422247485119660032/image.png?ex=68dca370&is=68db51f0&hm=580fdaf6673b43ad4299014836840803ea9239460dadb1e913c07720cc2030bc&" alt="Drinks" class="menu-image">
             <h3>Drinks</h3>
+            </a>
         </div>
         <div class="menu-item">
-            <img src="https://img.wongnai.com/p/1920x0/2023/03/31/c64db67ec5554473815762fecadcbc15.jpg" alt="Cake" class="menu-image">
+            <a routerLink="/cake">
+            <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1422247485715382312/image.png?ex=68dca370&is=68db51f0&hm=77eca85bff5ffcdf85a86a7ff8160aba4974e3ac1fbf93850ea6a35a4a6ba77f&" alt="Cake" class="menu-image">
             <h3>Cake</h3>
+            </a>
         </div>
         <div class="menu-item">
+            <a routerLink="/brownie">
             <img src="https://i.pinimg.com/736x/44/c5/e3/44c5e38fab6ee698ed4c7d93051babcb.jpg" alt="Brownie" class="menu-image">
             <h3>Brownie</h3>
+            </a>
         </div>
     </div>
