--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -2,26 +2,44 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
   <div class="container">
     <!-- Left: Brand -->
-    <a class="navbar-brand brand" href="#">Good.Day</a>
+    <a class="navbar-brand brand" routerLink="/">Good.Day</a>
 
     <!-- Center: Menu -->
     <div class="mx-auto d-none d-lg-block">
       <ul class="nav gap-5 main-menu">
-        <li class="nav-item"><a class="nav-link active" href="#">HOME</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">MENU</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">ABOUT</a></li>
+        <li class="nav-item">
+          <a class="nav-link" 
+             routerLink="/" 
+             routerLinkActive="active" 
+             [routerLinkActiveOptions]="{ exact: true }">
+            HOME
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" 
+             routerLink="/menu" 
+             routerLinkActive="active">
+            MENU
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" 
+             routerLink="/about" 
+             routerLinkActive="active">
+            ABOUT
+          </a>
+        </li>
       </ul>
     </div>
 
-    <!-- Right: Icons (ใช้ Bootstrap Icons) -->
+    <!-- Right: Icons -->
     <div class="d-flex align-items-center gap-3 ms-auto">
-      <a href="#" class="icon-link" aria-label="Search">
+      <a routerLink="/search" class="icon-link" aria-label="Search">
         <i class="bi bi-search"></i>
       </a>
-      <a href="#" class="icon-link" aria-label="Cart">
+      <a routerLink="/cart" class="icon-link" aria-label="Cart">
         <i class="bi bi-basket2-fill"></i>
       </a>
     </div>
   </div>
 </nav>
-
