--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -37,7 +37,7 @@
       <a routerLink="/search" class="icon-link" aria-label="Search">
         <i class="bi bi-search"></i>
       </a>
-      <a routerLink="/cart" class="icon-link" aria-label="Cart">
+      <a routerLink="#" class="icon-link" (click)="toggleCart()" aria-label="Cart" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">
         <i class="bi bi-basket2-fill"></i>
       </a>
     </div>
