--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,14 @@
 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1424829182231314543/1.png?ex=68e55f15&is=68e40d95&hm=4fc54ca6d4952d356a8ca0a921efc54e09d6fd7627c321ea87e218a53dab25c4&" class="d-block w-100" alt="cafe">
+      <img src="assets/h1.png" class="d-block w-100" alt="cafe">
     </div>
     <div class="carousel-item">
-      <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1424829185112674427/2.png?ex=68e55f15&is=68e40d95&hm=c6744c3cec5541a6583394d44d26c44edf4a04c51fc1e336f1214bb87405d888&" class="d-block w-100" alt="order">
+      <img src="assets/h2.png" class="d-block w-100" alt="order">
     </div>
     <div class="carousel-item">
       <a routerLink="/menu">
-      <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1424829187843293257/3.png?ex=68e55f16&is=68e40d96&hm=d757164fb8f9e2ed4845fca5ea135a3e965bde4d0d5f6cd83b3cc35bff660eb4&" class="d-block w-100" alt="new">
+      <img src="assets/h3.png" class="d-block w-100" alt="new">
     </a>
     </div>
   </div>
@@ -42,13 +42,13 @@
         </div>
         <div class="menu-item">
              <a routerLink="/drinks">
-            <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1422247485119660032/image.png?ex=68dca370&is=68db51f0&hm=580fdaf6673b43ad4299014836840803ea9239460dadb1e913c07720cc2030bc&" alt="Drinks" class="menu-image">
+            <img src="assets/4.png" alt="Drinks" class="menu-image">
             <h3>Drinks</h3>
             </a>
         </div>
         <div class="menu-item">
             <a routerLink="/cake">
-            <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1422247485715382312/image.png?ex=68dca370&is=68db51f0&hm=77eca85bff5ffcdf85a86a7ff8160aba4974e3ac1fbf93850ea6a35a4a6ba77f&" alt="Cake" class="menu-image">
+            <img src="assets/5.png" alt="Cake" class="menu-image">
             <h3>Cake</h3>
             </a>
         </div>
