--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <!-- <main class="container"> -->
   <router-outlet></router-outlet>
+  <app-cart></app-cart>
 <!-- </main> -->
