ts-drink and service

--- a/src/app/pages/best-seller/best-seller.component.html
+++ b/src/app/pages/best-seller/best-seller.component.html
@@ -1,6 +1,6 @@
 <section class="menu">
         <div class="menu-item">
-            <img src="https://cdn.discordapp.com/attachments/1214599088448995330/1422299276670926879/image.png?ex=68dc2aec&is=68dad96c&hm=167964d6f0da41eb72b8f630b08597c0d6977e6873f5e16cfd8840bef9feadd6&" alt="Croissant">
+            <img src="https://media.discordapp.net/attachments/1214599088448995330/1422299276670926879/image.png?ex=68e36b2c&is=68e219ac&hm=d68ddd69ccdf26d035cd1236b990eda12ec9a8aefd623cd721ca63b0a6016f2d&=&format=webp&quality=lossless" alt="Croissant">
             <div class="item-info">
                 <h3>Croissant Plain</h3>
                 <p>1/THB 89</p>
