--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,13 +24,13 @@
 <div class="menu-container">
         <div class="menu-item large">
             <a routerLink="/best-seller">
-            <img src="https://img.freepik.com/premium-photo/delicious-breakfast-with-croissants-coffee-berries-gray-background_79830-3174.jpg" alt="Best Seller" class="menu-image">
-            <h3>Best Seller</h3>
+            <img src="https://static.amarintv.com/media/PJVlR0ljpN9mLUs8WKcdC8NHGcRAbvbit1RavjTZ6sWyEMGGrQTsQCzBT6cXc0HXsx.jpg" alt="Best Seller" class="menu-image">
+            <h3>Full Menu</h3>
             </a>
         </div>
         <div class="menu-item side">
             <a routerLink="/croissant">
-            <img src="https://static.amarintv.com/media/PJVlR0ljpN9mLUs8WKcdC8NHGcRAbvbit1RavjTZ6sWyEMGGrQTsQCzBT6cXc0HXsx.jpg" alt="Croissant" class="menu-image">
+            <img src="https://img.freepik.com/premium-photo/delicious-breakfast-with-croissants-coffee-berries-gray-background_79830-3174.jpg" alt="Croissant" class="menu-image">
             <h3>Croissant</h3>
             </a>
         </div>
