--- a/src/app/pages/menu/menu.component.css
+++ b/src/app/pages/menu/menu.component.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
     padding: 12px;
     margin: 0;
-    background-color: rgba(243, 226, 199, 0.95);
+    background-color: #FFE2D891;
     color: #5d4037;
     text-align: center;
     font-size: 1em;
