--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -2,7 +2,7 @@
         <div class="menu-item large">
             <a routerLink="/best-seller">
             <img src="assets/1.png" alt="Best Seller" class="menu-image">
-            <h3>Best Seller</h3>
+            <h3>Full Menu</h3>
             </a>
         </div>
         <div class="menu-item side">
